--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "vue-nes-login",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build-bundle": "vue-cli-service build --target lib --name vue-nes-login ./src/App.vue",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -42,5 +41,13 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
+  ],
+  "main": "./dist/vue-nes-login.common.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
   ]
 }
