--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
     "build-bundle": "vue-cli-service build --target lib --name vue-nes-login ./src/App.vue",
     "lint": "vue-cli-service lint"
   },
